# log_analyzer

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/instructions/: cpp-style.instructions.md  testing-style.instructions.md
bench/: AppModesBenchmark.cpp  CMakeLists.txt
cmake/: Packaging.cmake  ProjectOptions.cmake  functions.cmake
profiles/: Debug  Release
scripts/: check_tidy.sh  clean.sh  create_env.sh  fix_style.sh  package.sh  run_tests.sh
src/: main.cpp
src/analysis/: Aggregator.cpp  Aggregator.hpp  CMakeLists.txt  FileAnalyzer.cpp  FileAnalyzer.hpp
src/app/: App.cpp  App.hpp  CMakeLists.txt  Cli.cpp  Cli.hpp  CliArgs.hpp
src/concurrency/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.hpp  ThreadSafeAggregator.cpp  ThreadSafeAggregator.hpp
src/domain/: CMakeLists.txt  FileStats.hpp  TotalStats.hpp  Types.hpp
src/io/: CMakeLists.txt  FileScanner.cpp  FileScanner.hpp
src/parser/: CMakeLists.txt  Tokenizer.cpp  Tokenizer.hpp
src/report/: CMakeLists.txt  ConsoleReport.cpp  ConsoleReport.hpp  JsonReport.cpp  JsonReport.hpp
tests/: CMakeLists.txt  Test_Aggregator.cpp  Test_App.cpp  Test_Cli.cpp  Test_Concurrency.cpp  Test_ConsoleReport.cpp  Test_FileAnalyzer.cpp  Test_FileScanner.cpp  Test_JsonReport.cpp  Test_Parser.cpp
tests/data/edge_cases/: not_matching.csv
tests/data/small/: sample.txt  sample_upper.TXT
